spacing on bottom, and fixed backwards check availability logic

--- a/clients/frontend/src/styling/General.css
+++ b/clients/frontend/src/styling/General.css
@@ -2,7 +2,7 @@
 
 .mainView{
     padding-left: 5%;
-    margin-bottom: 50px;
+    margin-bottom: 90px;
     max-width: 1500px;
 }
 
